fixed bug in MangaDBEntry._add_entry checked for both col and bool of _ext_infos on one line which meant that it could happen that it tried to _add_associated_col.. on ext_infos fixed huge bug -> one of the alterscripts prob left pragma foreign_keys on off so on delete cascade didnt work 	=> now always turning foreign_keys=ON every time we load the db add extinfo, add extinfo when jumping 	-> still hacky need to refactor add_book working and css ok limit with neg. nr works like normal query without limit in that it returns all rows and no performance hit (tested in Sqlitebrwoserportable)

--- a/manga_db/webGUI/static/style.css
+++ b/manga_db/webGUI/static/style.css
@@ -28,8 +28,8 @@ h3              { color: #22a7f0; }
 #page-next-inner {
 	position: relative;
 	top: 50%;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     font-size: 4em;
     font-weight: bold;
 }
@@ -46,8 +46,8 @@ h3              { color: #22a7f0; }
 #page-prev-inner {
 	position: relative;
 	top: 50%;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.3em;
+    padding-right: 0.3em;
     font-size: 4em;
     font-weight: bold;
 }
@@ -246,6 +246,15 @@ li.warning {
 .button-icon {
     display: inline;
     margin: 0;
+}
+#add-ext-info-btn {
+    color: #1a1a1a; display: table-cell; /*margin-left: 10px;*/ margin-left: 5px;
+    margin-right: 0; margin-top: auto; margin-bottom: auto; padding: 6px; 
+}
+#add-book-btn {
+    float: right;
+    padding: 5px;
+    margin: 3px;
 }
 #jump-book-btn {
     background-color: #c00;
